Fixed Small CSS Issue
When clicking "Module Materials" on the nav bar, it was jumping too far down, so I offset the jump by 100px.

--- a/CLUE.css
+++ b/CLUE.css
@@ -283,6 +283,10 @@ hr {
 	transform: translateY(-2px);
 }
 
+#module {
+	scroll-margin-top: 100px;
+}
+
 /* Formatting for Unit Cards */
 .units-grid {
 	display: grid;
